Replaced #newInstance() against Constructor#newInstance().